# DjangoDeploy

./: .dockerignore  .env.example  Dockerfile  README.md  build-and-push.sh  docker-compose.yml  pyproject.toml
config/: __init__.py  celery.py  settings.py  urls.py
frontend/: package.json
nginx/: nginx.conf
