[project]
name = "djangodeploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-ninja>=1.4.5",
    "psycopg2-binary>=2.9.11",
    "gunicorn>=23.0.0",
    "celery>=5.4.0",
    "pillow>=11.0.0",
]
